--- a/cyclotron-site/app/styles/_widgets.less
+++ b/cyclotron-site/app/styles/_widgets.less
@@ -7,6 +7,7 @@
 @import "../widgets/iframe/_iframe.less";
 @import "../widgets/image/_image.less";
 @import "../widgets/javascript/_javascript.less";
+@import "../widgets/json/_json.less";
 @import "../widgets/number/_number.less";
 @import "../widgets/qrcode/_qrcode.less";
 @import "../widgets/stoplight/_stoplight.less";
